--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^2.0.1",
     "config": "^1.29.4",
     "cors": "^2.8.4",
