Add POST /api/users for registration and POST /api/auth for login

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fullstack_classroom",
+  "name": "react_fullstack_classroom",
   "version": "1.0.0",
   "description": "A class record app that gives teachers a visual overview of classrooms, attendance, assignments, and grades.",
   "main": "server.js",
@@ -38,7 +38,8 @@
     "lodash": "^4.17.10",
     "moment": "^2.20.1",
     "mongoose": "^5.0.2",
-    "winston": "^2.4.0",
-    "winston-mongodb": "^3.0.0"
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   }
 }
