--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "moment": "^2.20.1",
     "mongoose": "^5.0.2",
     "morgan": "^1.9.1",
-    "winston": "^2.4.0",
-    "winston-mongodb": "^3.0.0"
+    "winston": "^2.4.0"
   }
 }
