--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "description": "Mern Demo",
   "private": true,
-  "proxy": "http://localhost:3001/",
+  "proxy": {
+    "/api/*": {
+      "target": "http://[::1]:3001"
+    }
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "joi-browser": "^13.4.0",
