--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.0.2",
     "morgan": "^1.9.1",
+    "react-scripts": "^2.1.3",
     "winston": "^2.4.0"
   }
 }
