--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bcrypt": "^2.0.1",
     "config": "^1.29.4",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
     "express-async-errors": "^2.1.0",
     "fawn": "^2.1.5",
