--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "seed": "node seed.js",
     "test": "jest --watchAll --verbose"
   },
@@ -26,6 +26,7 @@
     "bcrypt": "^2.0.1",
     "config": "^1.29.4",
     "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
     "express": "^4.16.3",
     "express-async-errors": "^2.1.0",
     "fawn": "^2.1.5",
