--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "react_fullstack_classroom",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A class record app that gives teachers a visual overview of classrooms, attendance, assignments, and grades.",
   "main": "server.js",
+  "engines": {
+    "node": "11.2.0"
+  },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "install": "cd client && npm install",
+    "install": "cd client && yarn install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "cd client && npm install && npm run build",
+    "heroku-postbuild": "npm run build",
     "seed": "node seed.js",
     "test": "jest --watchAll --verbose"
   },
