Add class to homepage and add favicon

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "https://i.imgur.com/MPja0Rf.png",
       "sizes": "192x192",
       "type": "image/png"
     }
